log
Sun May  3 09:49:45 PM UTC 2026: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:73:23: error: ‘TreeMap’ has no member named ‘left’
   73 |             aux = tree->left;
      |                       ^~
treemap.c:76:23: error: ‘TreeMap’ has no member named ‘right’
   76 |             aux = tree->right;
      |                       ^~
661ca07
